--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "dependencies": {
     "eyespect": "~0.1.8",
     "cradle": "~0.6.4",
-    "required-keys": "~1.0.4"
+    "required-keys": "~1.0.4",
+    "bcrypt-nodejs": "0.0.3"
   },
   "devDependencies": {
     "should": "~1.2.2",
     "nconf": "~0.6.7",
     "cradle": "~0.6.4",
-    "mocha": "~1.8.1"
+    "mocha": "~1.8.1",
+    "async": "~0.2.5"
   }
 }
