--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Store profile information in couchdb",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha --reporter spec"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
