--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "couch-profile",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Store profile information in couchdb",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "keywords": [
     "couchdb",
+    "couchdb-update-views",
     "cradle",
     "user",
     "profile",
@@ -21,7 +22,6 @@
   "author": "Noah Isaacson",
   "license": "BSD",
   "readmeFilename": "README.md",
-  "gitHead": "1dd84c5c1cf26baff131be62e97aab7faabe0287",
   "dependencies": {
     "eyespect": "~0.1.8",
     "cradle": "~0.6.4",
