--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: node_js
 # startup couchdb on boot
 services:
   - couchdb
+before_script:
+  npm install -g couchdb-update-views
 # test on one node.js version: 0.8
 node_js:
   - 0.8
